<resources>
    <string name="app_name">TestProjectForWork</string>
    <string name="home_icon">Главная</string>
    <string name="catalog_icon">Каталог</string>
    <string name="bag_icon">Корзина</string>
    <string name="action_icon">Акции</string>
    <string name="profile_icon">Профиль</string>
    <string name="profile_title">Личный кабинет</string>
    <string name="favourite_title">Избранное</string>
    <string name="button_vhod">Войти</string>
    <string name="hint_phone">Номер телефона</string>
    <string name="hint_last_name">Фамилия</string>
    <string name="hint_first_name">Имя</string>
    <string name="loyal_prog">Нажимая кнопку \"Войти\", Вы принимаете \nусловия программы лояльности</string>
    <string name="title_vhod">Вход</string>
    <string name="shops">Магазины</string>
    <string name="oferta">Оферта</string>
    <string name="obr_sv">Обратная связь</string>
    <string name="back_tovar">Возврат товара</string>
    <string name="away">Выйти</string>
    <string name="get_data">Получение данных</string>
    <string name="no_fav">Список избранного пуст</string>
    <string name="see_all">Смотреть все</string>
    <string name="face">Лицо</string>
    <string name="body">Тело</string>
    <string name="zagar">Загар</string>
    <string name="mask">Маски</string>
    <string name="popular">По популярности</string>
    <string name="min_price">По уменьшению цены</string>
    <string name="max_price">По возрастанию цены</string>
    <string name="filters">Фильтры</string>
    <string name="opis">Описание</string>
    <string name="param">Характеристики</string>
    <string name="sostav">Состав</string>
    <string name="add_to_bag">Добавить в корзину</string>
    <string name="podr">Подробнее</string>
    <string name="hide">Скрыть</string>
    <string name="bad_letter">Недопустимый символ!</string>
    <string name="bad_phone">Некорректный номер!</string>
    <string name="products">Товары</string>
    <string name="brands">Бренды</string>
</resources>